# HamArc

./: CMakeLists.txt  README.md
lib/: Archive.cpp  Archive.h  ArchiveReader.cpp  ArchiveReader.h  ArchiveWriter.cpp  ArchiveWriter.h  CMakeLists.txt  HammingDecryptor.cpp  HammingDecryptor.h  HammingEncoder.cpp  HammingEncoder.h
parser/: ArgParser.cpp  ArgParser.h  Argument.cpp  Argument.h  CMakeLists.txt
